# lexau-haskell

./: Makefile  README  lexau-oracle.data  lexau-totem.cabal
doc/architecture/: architecture.graffle  lexau.sty  make.sh  rapport.tex
mongodb/: drop-nodes.js  test.js  test.sh
src/: Main.hs
src/Data/PrettyPrint/: Implementation.hs  Parens.x  Swallow.hs
src/LExAu/API/: Alphabet.hs  Database.hs  DescriptionLength.hs  Distribution.hs  Encounter.hs  HistoryTree.hs  Indexed.hs  Interaction.hs  MDL.hs  Markov.hs  Model.hs  MongoDB.hs  Named.hs  ReaderContext.hs
src/LExAu/Alphabet/: Directed.hs  Standard.hs
src/LExAu/Distribution/: Histogram.hs  MDL.hs
src/LExAu/IO/: Example.hs  ReadFile.hs  ReadWordsFile.hs  Words.x
src/LExAu/Model/: HistoryTree.hs  Markov.hs  Trivial.hs
src/LExAu/Model/HistoryTreeDBImpl/: Habits.hs  Observed.hs
src/LExAu/Model/HistoryTreeImpl/: Covered.hs  Expected.hs  ExpectedData.hs  HTData.hs  Observed.hs  Process.hs  Solid.hs  Utilities.hs
src/LExAu/Pipeline/: Concurrent.hs  MongoDB.hs
src/LExAu/Utilities/: Data.hs  DescriptionLength.hs  DetailedException.hs  HttpController.hs  Logging.hs  MVar.hs  MongoDB.hs  ThreadManager.hs
